--- a/src/pop-up/index.html
+++ b/src/pop-up/index.html
@@ -8,6 +8,6 @@
   <script type="module" src="/src/pop-up/main.js"></script>
 </head>
 
-<body class="bg-gray-900"></body>
+<body class="bg-white dark:bg-gray-900"></body>
 
 </html>
